--- a/src/main/resources/UIForms/AddContact.fxml
+++ b/src/main/resources/UIForms/AddContact.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
@@ -7,16 +8,17 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="350.0" prefWidth="400.0" style="-fx-background-color: #2D3447;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.enovikow.address.view.PersonEditDialog">
+<AnchorPane prefHeight="350.0" prefWidth="491.0" style="-fx-background-color: #2D3447;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.enovikow.address.view.PersonEditDialog">
 
    <children>
-      <GridPane layoutY="41.0" prefHeight="323.0" prefWidth="369.0" AnchorPane.bottomAnchor="68.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="41.0">
+      <GridPane layoutY="41.0" prefHeight="323.0" prefWidth="450.0" AnchorPane.bottomAnchor="68.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="41.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="151.0" minWidth="10.0" prefWidth="62.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="189.0" minWidth="10.0" prefWidth="189.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="250.0" minWidth="10.0" prefWidth="250.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -41,19 +43,76 @@
                <font>
                   <Font size="14.0" />
                </font></Label>
-            <TextField GridPane.columnIndex="1" />
-            <TextField prefWidth="230.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="firstnameTextField" prefWidth="212.0" GridPane.columnIndex="1" />
+            <TextField fx:id="lastnameTextField" prefWidth="230.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="addressTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="25.0" text="Day" textFill="#a0a2ab">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <HBox.margin>
+                        <Insets top="20.0" />
+                     </HBox.margin>
+                  </Label>
+                  <TextField fx:id="dayTextField" maxWidth="43.0" prefHeight="25.0" prefWidth="45.0">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <HBox.margin>
+                        <Insets top="15.0" />
+                     </HBox.margin>
+                  </TextField>
+                  <Label prefWidth="45.0" text="Month" textFill="#a0a2ab">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <HBox.margin>
+                        <Insets top="20.0" />
+                     </HBox.margin>
+                     <padding>
+                        <Insets left="3.0" />
+                     </padding>
+                  </Label>
+                  <TextField fx:id="monthTextField" maxWidth="46.0" prefHeight="25.0" prefWidth="45.0">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <HBox.margin>
+                        <Insets top="15.0" />
+                     </HBox.margin>
+                  </TextField>
+                  <Label prefWidth="30.0" text="Year" textFill="#a0a2ab">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <HBox.margin>
+                        <Insets top="20.0" />
+                     </HBox.margin>
+                     <padding>
+                        <Insets left="3.0" />
+                     </padding>
+                  </Label>
+                  <TextField fx:id="yearTextField" maxWidth="60.0" prefHeight="25.0" prefWidth="60.0">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <HBox.margin>
+                        <Insets top="15.0" />
+                     </HBox.margin>
+                  </TextField>
+               </children>
+            </HBox>
          </children>
       </GridPane>
-      <ButtonBar layoutY="200.0" prefHeight="35.0" prefWidth="391.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
+      <ButtonBar layoutX="14.0" layoutY="301.0" prefHeight="35.0" prefWidth="419.0" AnchorPane.bottomAnchor="20.0">
         <buttons>
-          <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="190.0" style="-fx-background-color: #151928;" text="Ok" textFill="#249bf0">
+          <Button fx:id="okButton" mnemonicParsing="false" onAction="#okButtonAction" prefHeight="35.0" prefWidth="190.0" style="-fx-background-color: #151928;" text="Ok" textFill="#249bf0">
                <font>
                   <Font size="14.0" />
                </font></Button>
-            <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="190.0" style="-fx-background-color: #151928;" text="Cancel" textFill="#249bf0">
+            <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#cancelButtonAction" prefHeight="35.0" prefWidth="190.0" style="-fx-background-color: #151928;" text="Cancel" textFill="#249bf0">
                <font>
                   <Font size="14.0" />
                </font></Button>
