--- a/src/main/resources/UIForms/RootLayout.fxml
+++ b/src/main/resources/UIForms/RootLayout.fxml
@@ -76,7 +76,7 @@
                                 </Button>
                                 <Button mnemonicParsing="false" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #151928; -fx-border-color: #a0a2ab;" text="Settings" textFill="#249bf0">
                                     <VBox.margin>
-                                        <Insets left="20.0" top="160.0" />
+                                        <Insets left="20.0" top="40.0" />
                                     </VBox.margin>
                                     <font>
                                         <Font size="14.0" />
@@ -85,6 +85,17 @@
                                         <Cursor fx:constant="HAND" />
                                     </cursor>
                                 </Button>
+                        <Button fx:id="exitButton" mnemonicParsing="false" onAction="#exitButtonAction" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #151928; -fx-border-color: #a0a2ab;" text="Exit" textFill="#249bf0">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <VBox.margin>
+                              <Insets left="20.0" top="50.0" />
+                           </VBox.margin>
+                        </Button>
                             </children>
                         </VBox>
                     </children>
