--- a/src/main/resources/UIForms/AddContact.fxml
+++ b/src/main/resources/UIForms/AddContact.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="350.0" prefWidth="491.0" style="-fx-background-color: #2D3447;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.enovikow.address.view.PersonEditDialog">
+<AnchorPane prefHeight="350.0" prefWidth="491.0" style="-fx-background-color: #2D3447;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.enovikow.address.view.AddContactController">
 
    <children>
       <GridPane layoutY="41.0" prefHeight="323.0" prefWidth="450.0" AnchorPane.bottomAnchor="68.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="41.0">
