--- a/src/main/resources/UIForms/RootLayout.fxml
+++ b/src/main/resources/UIForms/RootLayout.fxml
@@ -63,7 +63,7 @@
                                         <Insets left="20.0" top="40.0" />
                                     </VBox.margin>
                                 </Button>
-                                <Button mnemonicParsing="false" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #151928; -fx-border-color: #a0a2ab;" text="Find Contacts" textFill="#249bf0">
+                                <Button fx:id="editContactsButton" mnemonicParsing="false" onAction="#editContactsButtonAction" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #151928; -fx-border-color: #a0a2ab;" text="Edit Contacts" textFill="#249bf0">
                                     <VBox.margin>
                                         <Insets left="20.0" top="40.0" />
                                     </VBox.margin>
